# RepoCraft

./: .editorconfig  .gitattributes  .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  OPERATION_GUIDE.md  PRIVACY.md  README.md  RELEASING.md  REVIEWS.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TERMS.md  go.mod  index.html  package.json  pyproject.toml  requirements.txt  scripts.js  styles.css
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/rulesets/: main-branch-protection.json  main-branch-protection.md
.github/workflows/: analytics-metrics.yml  auto-discussions.yml  auto-label-issues.yml  auto-label.yml  auto-release.yml  backup-recovery.yml  ci.yml  community-management.yml  comprehensive-testing.yml  dependabot-auto-merge.yml  label-automerge.yml  lint.yml  maintenance-tasks.yml  pages.yml  performance-monitoring.yml  quality-assurance.yml  release.yml  runner-guard.yml  security-management.yml  security-scan.yml  smart-notifications.yml
docs/: API.md  FAQ.md  GETTING_STARTED.md  INDEX.md  STYLE_GUIDE.md
